third_party/move/move-compiler-v2/tests/checking/visibility-checker/main_call_visibility_friend.exp

Diagnostics:
error: function `0x2::X::foo` cannot be called from a script because it is not public
   ┌─ tests/checking/visibility-checker/main_call_visibility_friend.move:3:24
   │
 3 │     public(friend) fun foo() {}
   │                        ^^^ callee
   ·
13 │     0x2::X::foo();
   │     ------------- called here
14 │     0x2::X::bar();
15 │     0x2::X::foo();
   │     ------------- called here

error: function `0x2::X::baz` cannot be called from a script because it is not public
   ┌─ tests/checking/visibility-checker/main_call_visibility_friend.move:7:9
   │
 7 │     fun baz() {}
   │         ^^^ callee
   ·
16 │     0x2::X::baz();
   │     ------------- called here

// -- Model dump before bytecode pipeline
module 0x2::X {
    public fun bar() {
        Tuple()
    }
    private fun baz() {
        Tuple()
    }
    friend fun foo() {
        Tuple()
    }
    spec fun $bar() {
        Tuple()
    }
    spec fun $baz() {
        Tuple()
    }
    spec fun $foo() {
        Tuple()
    }
} // end 0x2::X
module <SELF>_0 {
    private fun main() {
        X::foo();
        X::bar();
        X::foo();
        X::baz();
        Tuple()
    }
    spec fun $main();
} // end <SELF>_0
